@@ -769,6 +769,8 @@ ML {* @{cterm "%x. x"} *}
 ML {* @{cprop "x == y"} *}
 ML {* @{thm asm_rl} *}
 ML {* @{thms asm_rl} *}
+ML {* @{const_name c} *}
+ML {* @{const_syntax c} *}
 ML {* @{context} *}
 ML {* @{theory} *}
 ML {* @{theory Pure} *}
